WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
41193
Incorrect use of '+ 4' and 0 instead of tag and payload offsets in JSValue32_64
https://bugs.webkit.org/show_bug.cgi?id=41193
Summary
Incorrect use of '+ 4' and 0 instead of tag and payload offsets in JSValue32_64
Oliver Hunt
Reported
2010-06-24 23:06:35 PDT
Incorrect use of '+ 4' and 0 instead of tag and payload offsets in JSValue32_64
Attachments
Patch
(9.87 KB, patch)
2010-06-24 23:08 PDT
,
Oliver Hunt
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2010-06-24 23:08:29 PDT
Created
attachment 59736
[details]
Patch
Maciej Stachowiak
Comment 2
2010-06-24 23:16:17 PDT
Comment on
attachment 59736
[details]
Patch r=me
Oliver Hunt
Comment 3
2010-06-24 23:18:53 PDT
Committed
r61830
: <
http://trac.webkit.org/changeset/61830
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug